tests/nts_files/bad/in_to_in.nts
.chipsets:
output o1
output o2

.links:
o1:1 o2:1
